@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: February 28, 2011</p>
+      <p>Last Updated: March 1, 2011</p>
     </td>
   </tr>
 </table>
@@ -2101,6 +2101,10 @@ nuttx-5.19 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
         nsh> cat test.txt
         This is a test
+
+    * drvers/pipes/pipe_common.c:  Driver open method eas not returning an EINTR
+      error when it received a signal.  Instead, it just re-started the wait.  This
+      makes it impossible to kill a background pipe operation from NSH.
 
 pascal-2.1 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
